[gd_scene load_steps=3 format=3 uid="uid://dyq6nlob3vhpy"]

[ext_resource type="Script" path="res://UI/combat_button.gd" id="1_xur0u"]
[ext_resource type="PackedScene" uid="uid://4m3012qcw12n" path="res://Scenes/combatant.tscn" id="2_08hvv"]

[node name="Button" type="Button"]
custom_minimum_size = Vector2(46, 46)
focus_mode = 0
icon_alignment = 1
expand_icon = true
script = ExtResource("1_xur0u")
_combatant = ExtResource("2_08hvv")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 4

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
